2005-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.test: Made results of tie-7.1 and -7.2 version-dependent,
	  using the proper tcltest commands from all.tcl.

2005-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ../examples/tie/metakit.tcl: Added an example backend for tieing
	  arrays to a metakit database.

2005-03-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie.man (unsetv): Fixed a small documentation error. The
	  argument to unsetv is not optional. Thanks to Colin McCormack
	  <coldstore@users.sourceforge.net> for finding this.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie_file.tcl:  Fixed problems with tests and implementation
	* tie_file.test: on Windows.

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Fixed mismatch in the names of provided
	  vs. indexed packages, for the packages implementing the standard
	  types. Thanks to './sak.tcl validate'.

	* tie_rarray_comm.test: Added code to abort tests when trying
	* tie_rarray.test:      to run them with a Tcl < 8.4.
	* tie_array.test:
	* tie_file.test:
	* tie_log.test:
	* tie.test:

2004-09-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tie_rarray_comm.test: Fixed test suite dependencies on
	* tie_test:             'cmdline', ensuring source of local
	                        implementation.

2004-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Bumped version to 1.0.

	* tie_rarray.tcl: Fixed propagation of [unset] to use the option
	  -nocomplain. Required to avoid problems with circular ties.

	* tie_rarray_comm.test: New tests for remote array involving true
	  remove communication, using [comm].

	* tie_array.test: Updated to surely use the local revision of